# 4diac-forte-1.12

./: .cproject  README.md  docker_toolchain_bash.sh  docker_toolchain_test.sh  setup_posix.sh
esp8266/: forte_config.h  forteinit.cpp  stringlist.cpp
esp8266/core/: deviceExecutionHandlers.cpp
esp8266/core/cominfra/: comlayersmanager.cpp
esp8266/src/src/modules/: CMakeLists.txt
recipes/: ar4k_console_with_wifi.sh
