SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/opc_ua")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}opc_ua")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/mqtt_paho")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}mqtt_paho")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/ads")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}ads")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/wagokbus")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}wagokbus")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/mlpi")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}mlpi")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/odroid")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}odroid")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/raspberry_sps")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}raspberry_sps")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/arrowhead")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}arrowhead")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/ros")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}ros")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/powerlink")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}powerlink")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/HTTP")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}HTTP")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/eclipseSCADA_SFP")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}eclipseSCADA_SFP")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/sysfs")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}sysfs")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/xquery")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}xquery")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/tsn")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}tsn")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/piface")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}piface")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/modbus")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}modbus")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/opc")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}opc")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/i2c_dev")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}i2c_dev")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/IEC61131-3")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}IEC61131-3")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/lms_ev3")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}lms_ev3")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/rt_events")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}rt_events")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/umic")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}umic")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/utils")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}utils")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/conmeleon_c1")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}conmeleon_c1")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/embrick")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}embrick")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/convert")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}convert")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/reconfiguration")
ADD_SUBDIRECTORY("${FORTE_MODULE_DIR}reconfiguration")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
